Interior and final tuning

--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAntenna.cfg
@@ -5,7 +5,7 @@ PART
 	author = silentVelcro,capkirk
 	MODEL
 	{
-		model = LonesomeRobots/DynaSoar/DynaTeleAnt
+		model = ROCapsules/Assets/LonesomeRobot/DynaTeleAnt
 	}
 
 	rescaleFactor = 1.5625
@@ -41,5 +41,16 @@ PART
 		requiredResource = ElectricCharge
 		antennaPower = 500000
 		antennaCombinable = False
+	}
+}
+
+//RA compatibility
+@PART[ROC-DynaAntenna]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 3.0
 	}
 }
