--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
@@ -104,7 +104,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 1.9
+			rate = 2.09
 		}
 	}
 
@@ -197,5 +197,153 @@ PART
 		optimumRange = 2500
 		packetFloor = .1
 		packetCeiling = 5
+	}
+}
+
+//	================================================================================
+//	TAC Life Support Compatibility
+//	================================================================================
+@PART[ROC-DynaBody]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
+{
+	//Fuel cells (4 kilowatt?)
+	MODULE
+	{
+		name = TacGenericConverter
+		%converterName = Fuel Cell
+		%StartActionName = Start Fuel Cell
+		%StopActionName = Stop Fuel Cell
+		%conversionRate = 2.0
+		//inputResources = LqdHydrogen, 0.000296379, LqdOxygen, 0.000210317
+		//outputResources = WasteWater, 0.00025967179, true, ElectricCharge, 2.2, true
+		INPUT_RESOURCE
+		{
+			%ResourceName = LqdHydrogen
+			%Ratio = 0.000296379
+		}
+		INPUT_RESOURCE
+		{
+			%ResourceName = LqdOxygen
+			%Ratio = 0.000210317
+		}		
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = WasteWater
+			%Ratio = 0.00025967179
+			%DumpExcess = true
+		}
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = ElectricCharge
+			%Ratio = 2.2
+			%DumpExcess = false // if the batteries are full, we would want the full cell to stop running, right?
+		}
+	}
+
+	//LOX to GOX converter
+	MODULE
+	{
+		name = TacGenericConverter
+		%converterName = LOX-O2
+		%StartActionName = Start Oxygen Generator
+		%StopActionName = Stop Oxygen Generator
+		%conversionRate = 3.0
+		//inputResources = LqdOxygen, 0.0000085058788, ElectricCharge, 0.025
+		//outputResources = Oxygen, 0.006883126, false
+		INPUT_RESOURCE
+		{
+			%ResourceName = LqdOxygen
+			%Ratio = 0.0000085058788
+		}
+		INPUT_RESOURCE
+		{
+			%ResourceName = ElectricCharge
+			%Ratio = 0.025
+		}
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = Oxygen
+			%Ratio = 0.006883126
+			%DumpExcess = false
+		}
+	}
+
+	//Scrubber
+	MODULE
+	{
+		name = TacGenericConverter
+		%converterName = CO2 Scrubber
+		%StartActionName = Start AirFilter
+		%StopActionName = Stop AirFilter
+		%conversionRate = 3.0	// # of people - Figures based on per/person
+		//inputResources = CarbonDioxide, 0.006216, ElectricCharge, 0.010, LithiumHydroxide, 0.00001189
+		//outputResources = Waste, 0.00003932, false
+		INPUT_RESOURCE
+		{
+			%ResourceName = ElectricCharge
+			%Ratio = 0.1
+		}
+		INPUT_RESOURCE
+		{
+			%ResourceName = CarbonDioxide
+			%Ratio = 0.006216
+		}
+		INPUT_RESOURCE
+		{
+			%ResourceName = LithiumHydroxide
+			%Ratio = 0.00001189
+		}
+		OUTPUT_RESOURCE
+		{
+			%ResourceName = Waste
+			%Ratio = 0.00003932
+			%DumpExcess = false
+		}
+	}
+
+	//Using Gemini loadout
+	@MODULE[ModuleFuelTanks]
+	{
+		TANK
+		{
+			name = Food
+			amount = 164
+			maxAmount = 164	// 14 days
+		}
+		TANK
+		{
+			name = Water
+			amount = 8
+			maxAmount = 8	// 1 day
+		}
+		TANK
+		{
+			name = Oxygen
+			amount = 1184
+			maxAmount = 1184	// 1 day
+		}
+		TANK
+		{
+			name = CarbonDioxide
+			amount = 0
+			maxAmount = 1023	// 1 day
+		}
+		TANK
+		{
+			name = Waste
+			amount = 0
+			maxAmount = 111	// 14 days
+		}
+		TANK
+		{
+			name = WasteWater
+			amount = 0
+			maxAmount = 138	// 14 days
+		}
+		TANK
+		{
+			name = LithiumHydroxide
+			amount = 29
+			maxAmount = 29	// 14 days
+		}
 	}
 }
