--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaFuelTank.cfg
@@ -19,7 +19,7 @@ PART
 	category = Propulsion
 	subcategory = 0
 	title = DynaSoar Fuel Tank
-	manufacturer = LonesomeRobots
+	manufacturer = Boeing
 	attachRules = 1,0,1,1,0
 	mass = 0.150
 	dragModelType = default
