--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaTitanAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaTitanAdapter.cfg
@@ -29,7 +29,7 @@ PART
 	subcategory = 0
 	title = DynaSoar Titan Rocket Adapter and Decoupler
 	manufacturer = Boeing
-	description = This part connects the DynaSoar with a Titan II or Titan IIIC rocket.
+	description = A 4 meter adapter to attach DynaSoar to a Titan C rocket.
 
 	mass = 0.1
 	dragModelType = default
