--- a/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingarms.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingarms.cfg
@@ -23,7 +23,7 @@ PART
 	subcategory = 0
 	title = DynaSoar Docking Arms
 	manufacturer = Boeing
-	description = DynaSoar Docking arms. Attach them on the front left node of the DynaSoar body. They include a docking radar(JSI). Don’t forget to jettison them before reentry.
+	description = DynaSoar Docking arms. Attach them on the front left node of the DynaSoar body. Don’t forget to jettison them before reentry.
 
 	attachRules = 1,0,1,1,1
 
