--- a/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingsystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/dynadockingsystem.cfg
@@ -24,7 +24,7 @@ PART
 	subcategory = 0
 	title = DynaSoar Docking Rod
 	manufacturer = Boeing
-	description = SIV Docking rod for the DynaSoar. This is where the docking arms attach.
+	description = Docking rod for the DynaSoar. This is where the docking arms attach.
 
 	attachRules = 1,0,1,1,1
 
