--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAftBay.cfg
@@ -125,8 +125,8 @@ PART
 	MODULE
 	{
 		name = ModuleFuelTanks
-		volume = 3140
-		type = ServiceModule
+		volume = 1770
+		type = HTPB
 		basemass = -1
 		TANK
 		{
@@ -134,6 +134,14 @@ PART
 			amount = 1770
 			maxAmount = 1770
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleFuelTanks
+		volume = 3000
+		type = ServiceModule
+		basemass = -1
 		TANK
 		{
 			name = LqdHydrogen
@@ -183,7 +191,7 @@ PART
 		name = ModuleDecouple
 		isOmniDecoupler = False
 		explosiveNodeID = top
-		ejectionForce = 300
+		ejectionForce = 30
 		staged = false
 	}
 
@@ -211,73 +219,8 @@ PART
 
 		atmosphereCurve
 		{
-			key = 0 290
-			key = 1 275
-		}
-	}
-}
-
-//	================================================================================
-//	TAC Life Support Compatibility
-//	================================================================================
-@PART[ROC-DynaAftBay]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
-{
-	MODULE
-	{
-		name = TacGenericConverter
-		%converterName = Fuel Cell
-		%StartActionName = Start Fuel Cell
-		%StopActionName = Stop Fuel Cell
-		%conversionRate = 2.0
-		//inputResources = LqdHydrogen, 0.000296379, LqdOxygen, 0.000210317
-		//outputResources = WasteWater, 0.00025967179, true, ElectricCharge, 2.2, true
-		INPUT_RESOURCE
-		{
-			%ResourceName = LqdHydrogen
-			%Ratio = 0.000296379
-		}
-		INPUT_RESOURCE
-		{
-			%ResourceName = LqdOxygen
-			%Ratio = 0.000210317
-		}		
-		OUTPUT_RESOURCE
-		{
-			%ResourceName = WasteWater
-			%Ratio = 0.00025967179
-			%DumpExcess = true
-		}
-		OUTPUT_RESOURCE
-		{
-			%ResourceName = ElectricCharge
-			%Ratio = 2.2
-			%DumpExcess = false // if the batteries are full, we would want the full cell to stop running, right?
-		}
-	}
-	MODULE
-	{
-		name = TacGenericConverter
-		%converterName = LOX-O2
-		%StartActionName = Start Oxygen Generator
-		%StopActionName = Stop Oxygen Generator
-		%conversionRate = 3.0
-		//inputResources = LqdOxygen, 0.0000085058788, ElectricCharge, 0.025
-		//outputResources = Oxygen, 0.006883126, false
-		INPUT_RESOURCE
-		{
-			%ResourceName = LqdOxygen
-			%Ratio = 0.0000085058788
-		}
-		INPUT_RESOURCE
-		{
-			%ResourceName = ElectricCharge
-			%Ratio = 0.025
-		}
-		OUTPUT_RESOURCE
-		{
-			%ResourceName = Oxygen
-			%Ratio = 0.006883126
-			%DumpExcess = false
+			key = 0 137
+			key = 1 57
 		}
 	}
 }
