--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaBody.cfg
@@ -117,19 +117,31 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 525
+		volume = 2500
 		basemass = -1
 		TANK
 		{
+			name = LqdHydrogen
+			amount = 413
+			maxAmount = 413
+		}
+		TANK
+		{
+			name = LqdOxygen
+			amount = 317
+			maxAmount = 317
+		}
+		TANK
+		{
 			name = ElectricCharge
-			amount = 14400
-			maxAmount = 14400
+			amount = 762048
+			maxAmount = 762048
 		}
 		TANK
 		{
 			name = HTP
-			amount = 100
-			maxAmount = 100
+			amount = 150
+			maxAmount = 150
 		}
 	}
 
