--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaCabin.cfg
@@ -42,6 +42,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 525
+		basemass = -1
+	}
+	MODULE
+	{
 		name = ModuleScienceExperiment
 		experimentID = crewReport
 		experimentActionName = Crew Report
