--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaTitanAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaTitanAdapter.cfg
@@ -27,7 +27,7 @@ PART
 	cost = 1200
 	category = Coupling
 	subcategory = 0
-	title = DynaSoar Titan Rocket Adapter and Decoupler
+	title = DynaSoar Adapter and Decoupler
 	manufacturer = Boeing
 	description = A 4 meter adapter to attach DynaSoar to a Titan C rocket.
 
