--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaAntenna.cfg
@@ -3,12 +3,15 @@ PART
 	name = ROC-DynaAntenna
 	module = Part
 	author = silentVelcro,capkirk
+
+	RSSROConfig = true
+
 	MODEL
 	{
 		model = ROCapsules/Assets/LonesomeRobot/DynaTeleAnt
 	}
 
-	rescaleFactor = 1.5625
+	rescaleFactor = 1.7364
 	scale = 1.0
 
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
