--- a/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dynasoar/DynaSkidFront.cfg
@@ -4,6 +4,8 @@ PART
 	module = Part
 	author = silentVelcro, capkirk
 
+	RSSROConfig = true
+
 	MODEL
 	{
 		model = ROCapsules/Assets/LonesomeRobot/NoseSkid
