Add tank to Gemini Cabin

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -54,6 +54,14 @@ PART
 
 	MODULE
 	{
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 500
+		basemass = -1
+	}
+
+	MODULE
+	{
 		name = ModuleScienceExperiment
 		experimentID = crewReport
 		experimentActionName = Crew Report
