--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -216,7 +216,7 @@ PART
 }
 
 //correct internals?
-@PART[ROC-CSTCM]:FOR[RealismOverhaul]
+@PART[ROC-CSTCM]:AFTER[RealismOverhaul]
 {
 	@INTERNAL[CST100internal]
 	{
@@ -237,7 +237,7 @@ PART
 //	Remote Tech compatibility.
 //	==================================================
 
-@PART[ROC-CSTCM]:FOR[RealismOverhaul]:NEEDS[RemoteTech]
+@PART[ROC-CSTCM]:AFTER[RealismOverhaul]:NEEDS[RemoteTech]
 {
 	!MODULE[ModuleDataTransmitter],*{}
 
@@ -282,7 +282,7 @@ PART
 
 //	Real Antennas compatibility.
 //	==================================================
-@PART[ROC-CSTCM]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-CSTCM]:BEFORE[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
@@ -305,7 +305,7 @@ PART
 //	TAC Life Support compatibility.
 //	==================================================
 
-@PART[ROC-CSTCM]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ROC-CSTCM]:AFTER[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
 	@description ^= :$: Supports a crew of 7 for 2 days.:
 
