Added RA Module to the correct LEM Rover, Removed duplicated and incorrect CFG

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
@@ -411,3 +411,23 @@ PART
         }
     }
 }
+
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+@PART[ROC_LEMRover]:FOR[ROCapsules]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.60	//Can't find diameter, guess based on relative size to LM HGA
+		RFBand = S	//Default to S-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna	//VHF antenna for communication with LEM
+		referenceGain = 1.5
+		RFBand = VHF	//Default to VHF
+	}
+}
