--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -44,57 +44,20 @@ PART
 	childStageOffset = 1
 	stagingIcon = DECOUPLER_HOR
 	bulkheadProfiles = size3
-	thermalMassModifier = 1.0
 	
 	tags = starliner, boeing, cst100, cst-100, 100
+	
+	heatShieldTag = LEO
+	resetHeatShieldMass = true
+	resetHeatShieldAblator = true
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 
 	MODULE
 	{
 		name = ModuleDecouple
 		ejectionForce = 5
 		explosiveNodeID = top
-	}
-
-	MODULE:NEEDS[!DeadlyReentry]
-	{
-		name = ModuleAblator
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		lossExp = -6000
-		lossConst = 0.13
-		pyrolysisLossFactor = 6000
-		charMin = 0
-		charMax = 1
-		reentryConductivity = 0.01
-		ablationTempThresh = 500
-	}
-
-	MODULE:NEEDS[DeadlyReentry]
-	{
-		name = ModuleHeatShield
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		lossExp = -6000
-		lossConst = 0.13
-		pyrolysisLossFactor = 6000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-		depletedMaxTemp = 4800	//2650C
-	}
-
-	RESOURCE
-	{
-		name = Ablator
-		amount = 970
-		maxAmount = 970
-	}
-
-	RESOURCE
-	{
-		name = CharredAblator
-		amount = 0
-		maxAmount = 727.5
-	}
+	}	
 }
