--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -205,12 +205,6 @@ PART
 		}
 		TANK
 		{
-			name = CarbonDioxide
-			amount = 0
-			maxAmount = 62440
-		}
-		TANK
-		{
 			name = WasteWater
 			amount = 0
 			maxAmount = 600
@@ -335,6 +329,16 @@ PART
 //TACLS Support
 @PART[ROC-OrionCM]:FOR[RealismOverhaulTACLS]:NEEDS[TacLifeSupport]
 {
+	@MODULE[ModuleFuelTanks]
+	{
+		TANK
+		{
+			name = CarbonDioxide
+			amount = 0
+			maxAmount = 62440
+		}
+	}
+	
 	MODULE
 	{
 		name = TacGenericConverter
