--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -5,7 +5,6 @@ PART
 	author = DECQ, Pap, capkirk
 	
 	RSSROConfig = true
-	RP0conf = true
 	
 	//	============================================================================
 	//	Model and Dimensions
@@ -35,7 +34,6 @@ PART
 	
 	scale = 1.0
 	rescaleFactor = 1.0
-	
 	
 	node_stack_top = 0.0, 0.87, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_para = 0.0, 0.87, 0.0, 0.0, -1.0, 0.0, 1
@@ -82,7 +80,6 @@ PART
 		
 	crashTolerance = 8
 	maxTemp = 973.15
-	skinMaxTemp = 3573.15
 	emissiveConstant = 0.6 // not too absorptive for reentry
 	thermalMassModifier = 1.0
 	skinMassPerArea = 2.0
@@ -91,56 +88,6 @@ PART
 	breakingTorque = 250
 	
 	fuelCrossfeed = true
-	
-	MODULE:NEEDS[!DeadlyReentry]
-	{
-		name = ModuleAblator
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		useChar = True
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-	}
-	
-	MODULE:NEEDS[DeadlyReentry]
-	{
-		name = ModuleHeatShield
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		useChar = True
-		charModuleName = HeatShieldCharAnim
-		charMin = 0
-		charMax = 1
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-		depletedMaxTemp = 1200
-	}
-	
-	RESOURCE
-	{
-		name = Ablator
-		amount = 848
-		maxAmount = 848
-	}
-	
-	RESOURCE
-	{
-		name = CharredAblator
-		amount = 0
-		maxAmount = 636
-		isTweakable = False
-	}
 	
 	MODULE
 	{
@@ -235,7 +182,7 @@ PART
 		attachNodeName = bottom
 	}
 	
-	MODULE 
+	MODULE:NEEDS[RasterPropMonitor]
 	{
 		name = RasterPropMonitorComputer
 		RPM_COLOROVERRIDE
@@ -457,7 +404,7 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 120
+		volume = 500
 		basemass = -1
 
 		//	Three batteries ~3.36 kWn (28 V @ 40 Ah each).
@@ -574,6 +521,24 @@ PART
 	}
 }
 
+// Let RO Heatshield configure defaults
+@PART[ROC-ApolloCMBlockIII]:BEFORE[RealismOverhaul_HeatShield]
+{
+    heatShieldDiameter  = 3.91      // Previous Ablator = 848 corresponds to 3.68 diameter Lunar RO formula
+    heatShieldTag = Lunar
+    resetHeatShieldAblator = true
+}
+// Specific adjustments after default setup
+@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul_HeatShield]
+{
+    @MODULE[ModuleAblator]
+    {
+        charModuleName = HeatShieldCharAnim
+        charMin = 0
+        charMax = 1
+    }
+}
+
 //	================================================================================
 //	TAC Life Support Compatibility
 //	================================================================================
@@ -586,8 +551,6 @@ PART
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 380
-
 		TANK
 		{
 			name = Food
@@ -684,7 +647,7 @@ PART
 //	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
 
-@PART[ROC-ApolloCMBlockIII]:FOR[zzzRealismOverhaul]
+@PART[ROC-ApolloCMBlockIII]:LAST[ROCapsules]
 {
 	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
