Added the heatShieldDiameter field that broke the CST-100 HS

--- a/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTHS.cfg
@@ -48,6 +48,7 @@ PART
 	tags = starliner, boeing, cst100, cst-100, 100
 	
 	heatShieldTag = LEO
+	heatShieldDiameter = 4.56
 	resetHeatShieldMass = true
 	resetHeatShieldAblator = true
 	emissiveConstant = 0.6
