Apply rover antennas to right part name
-/_ typo

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
@@ -415,7 +415,7 @@ PART
 //  ================================================================================
 //	Configure RealAntennas
 //  ================================================================================
-@PART[ROC_LEMRover]:FOR[ROCapsules]:NEEDS[RealAntennas]
+@PART[ROC-LEMRover]:FOR[ROCapsules]:NEEDS[RealAntennas]
 {
 	!MODULE[ModuleDataTransmitter],* {}
 	MODULE
