Offset RA antenna mass in LRV

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
@@ -430,4 +430,5 @@ PART
 		referenceGain = 1.5
 		RFBand = VHF	//Default to VHF
 	}
+	@mass -= 0.042 // the mass added by those 2 antennas, at TL5, with low-wattage.
 }
