--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
@@ -27,7 +27,6 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch
 	attachRules = 1,0,1,0,0
-	mass = 0.050
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -35,8 +34,6 @@ PART
 	breakingForce = 72
 	breakingTorque = 72
 	crashTolerance = 18
-	maxTemp = 1500
-	skinMaxTemp = 2600
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
@@ -44,6 +41,12 @@ PART
 	bulkheadProfiles = size1p2
 
 	tags = gemini heat shield heatshield reentry
+
+	//use new heat shield tagging system to configure the shield instead
+	resetHeatShieldMass = True
+	resetHeatShieldAblator = True
+	heatShieldTag = LEO
+	heatShieldDiameter = 2.2
 
 	MODULE
 	{
