Fix GeminiBDB RA Patch
Referred to wrong part name

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiAntenna.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiAntenna.cfg
@@ -1,6 +1,5 @@
 PART
 {
-
 	name = ROC-GeminiAntennaBDB
 	module = Part
 	author = CobaltWolf
@@ -67,7 +66,7 @@ PART
 //	===========================================================================
 //	RA support
 //	===========================================================================
-@PART[ROC-GeminiAntenna]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+@PART[ROC-GeminiAntennaBDB]:BEFORE[RealAntennas]
 {
 	@MODULE[ModuleDataTransmitter]
 	{
