Gemini Heatshield default mass
RO patches didn't like not having a mass value to modify.  Fixed in RO, but doesn't hurt to also "fix" here with a dummy value.

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHS.cfg
@@ -11,7 +11,6 @@ PART
 		model = ROCapsules/Assets/BDB/Gemini/bluedog_Gemini_Heatshield_1p5m
 		rotation = 0, 180, 0
 	}
-
 	rescaleFactor = 1.524
 	node_stack_bottom = 0.0, 0.075149, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, 0.075149, 0.0, 0.0, 1.0, 0.0, 1
@@ -27,6 +26,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch
 	attachRules = 1,0,1,0,0
+	mass = 0.050
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
