Correct propellant loads

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -427,7 +427,7 @@ PART
     {
         name = ModuleFuelTanks
         type = ServiceModule
-        volume = 2085
+        volume = 2336.5
         basemass = -1
 
         //  Two batteries ~16.6 kWh (28 V @ 296 Ah each).
@@ -439,22 +439,23 @@ PART
             maxAmount = 59675
         }
 
-        //  LMAE and ACS fuel mass ~913 kg.
+		// LMAE propellant load ~2378 kg (source https://georgetyson.com/files/apollostatistics.pdf)
+		// RCS propellant load ~287 kg (wikipedia)
 
+		// ~1156.1 L Aerozine
         TANK
         {
             name = Aerozine50
-            amount = 1015
-            maxAmount = 1015
+            amount = 1156.1
+            maxAmount = 1156.1
         }
 
-        //  LMAE and ACS oxidizer mass ~1462 kg.
-
+		// ~1120.4 L NTO
         TANK
         {
             name = NTO
-            amount = 1008
-            maxAmount = 1008
+            amount = 1120.4
+            maxAmount = 1120.4
         }
     }
 	
