--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -380,7 +380,7 @@ PART
 // Add disclaimer about Early Life Support and ISRU node when RP-1 is installed
 @PART[ROC-GeminiCMBDB]:BEFORE[RP-0]
 {
-		@description ^=:$: The Gemini cabin. Contains two astronauts. The Early Life Support and ISRU node is required to enable the built-in scrubber.
+		@description ^=:$: <b><color=red>The Early Life Support and ISRU node is required to enable the built-in scrubber.</color></b>
 }
 //	================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
