fix Orion HS and nodes

--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -14,13 +14,7 @@ PART
 		scale = 1, 1, 1
 		rotation = 0, 180, 0
 	}
-	MODEL
-	{
-		model = ROCapsules/Assets/DECQ/Orion/HEAT_SHEALD
-		scale = 1, 1, 1
-		position = 0.0, 0.0, 0.0
-	}
-	
+
 	//	 Linear positive pitch thruster.
 
 	MODEL
@@ -45,7 +39,7 @@ PART
 	specPower = 500.1
 
 	node_stack_top = 0.0, 1.491405, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.9842814, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom = 0.0, -0.2842814, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_PARA = 0.0, 1.822791, 0.0, 0.0, 1.0, 0.0, 0
 	//node_stack_PARA2 = 0.0, 1.63239, 0.0, 0.0, 1.0, 0.0, 0
 
@@ -63,8 +57,8 @@ PART
 	attachRules = 1,0,1,1,0
 
 	// --- standard part parameters ---
-	//total empty mass with 600kg of crew = 9.299. Subtract 1,360t of ablator and 600 kg of maximum crew and 206kg of extra ECLSS
-	mass = 7.940
+	//total empty mass with 600kg of crew = 9.299. Subtract 1,801 kg of HS and 600 kg of maximum crew and 206kg of extra ECLSS
+	mass = 6.692
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
@@ -217,45 +211,6 @@ PART
 			amount = 168
 			maxAmount = 168
 		}
-	}
-	
-	MODULE:NEEDS[!DeadlyReentry]
-	{
-		name = ModuleAblator
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-	}
-	
-	MODULE:NEEDS[DeadlyReentry]
-	{
-		name = ModuleHeatShield
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-		depletedMaxTemp = 4800	//2650C
-	}
-	RESOURCE
-	{
-		name = Ablator
-		amount = 600
-		maxAmount = 600
-	}
-	RESOURCE
-	{
-		name = CharredAblator
-		amount = 0
-		maxAmount = 450
 	}
 	
 	EFFECTS
