--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -73,7 +73,7 @@ PART
 
 	node_stack_top = 0.0, 0.6595054, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -2.072776, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_ENG = 0.0, -0.87, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_ENG = 0.0, -1.2, 0.0, 0.0, -1.0, 0.0, 1
 
 	node_stack_12 = -1.503487, 0.7821556, -2.246316, 0.0, 1.0, 0.0, 1
 	node_stack_11 = 2.736962, 0.7821556, -0.06109023, 0.0, 1.0, 0.0, 1
@@ -203,8 +203,6 @@ PART
 		falloff = 1.2
 		thrustTransformName = newThrustTransform
 	}
-
-	PhysicsSignificance = 1
 }
 //Since the engine config will overwrite everything, add the rest of the SM afterwards
 @PART[ROC-OrionESM]:AFTER[RealismOverhaulEngines]
@@ -255,10 +253,20 @@ PART
 			maxAmount = 4031.3
 		}
 	}
+
 	MODULE
 	{
 		name = ModuleDecouple
 		ejectionForce = 150
 		explosiveNodeID = top
+	}
+
+	//make sure crossfeed is enabled (otherwise RCS won't work?)
+	MODULE
+	{
+		name = ModuleToggleCrossfeed
+		crossfeedStatus = true
+		toggleEditor = true
+		toggleFlight = true
 	}
 }
