--- a/GameData/ROCapsules/PartConfigs/Orion/OrionHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionHS.cfg
@@ -60,42 +60,10 @@ PART
 	fuelCrossFeed = False
 	bulkheadProfiles = size0 
 
-	MODULE:NEEDS[!DeadlyReentry]
-	{
-		name = ModuleAblator
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-	}
-	
-	MODULE:NEEDS[DeadlyReentry]
-	{
-		name = ModuleHeatShield
-		ablativeResource = Ablator
-		outputResource = CharredAblator
-		outputMult = 0.75
-		lossExp = -40000
-		lossConst = 15000
-		pyrolysisLossFactor = 40000
-		ablationTempThresh = 500
-		reentryConductivity = 0.01
-		depletedMaxTemp = 4800	//2650C
-	}
-	RESOURCE
-	{
-		name = Ablator
-		amount = 600
-		maxAmount = 600
-	}
-	RESOURCE
-	{
-		name = CharredAblator
-		amount = 0
-		maxAmount = 450
-	}
+
+	//use new heat shield tagging system to configure the shield instead
+	resetHeatShieldMass = True
+	resetHeatShieldAblator = True
+	heatShieldTag = Lunar
+	heatShieldDiameter = 4.9
 }
