Add :NEEDS[ProfileRealismOverhaul] to the patch

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -378,7 +378,7 @@ PART
 }
 
 // Add disclaimer about Early Life Support and ISRU node when RP-1 is installed
-@PART[ROC-GeminiCMBDB]:BEFORE[RP-0]
+@PART[ROC-GeminiCMBDB]:BEFORE[RP-0]:NEEDS[ProfileRealismOverhaul]
 {
 		@description ^=:$: <b><color=red>The Early Life Support and ISRU node is required to enable the built-in scrubber.</color></b>
 }
