--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Kerbalism Profile.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Kerbalism Profile.cfg
@@ -85,67 +85,62 @@
 		}
 	}
 
-	MODULE
-	{
-		name = ProcessController
-		resource = _AdvScrubber
-		title = Vacuum Scrubber
-		capacity = #$/CrewCapacity$
-		toggle = true
-		running = true
-	}
+  MODULE
+  {
+    name = ProcessController
+    resource = _AdvScrubber
+    title = Vacuum Scrubber
+    capacity = 1.67
+  	toggle = true
+    running = true
+  }
 
-	MODULE
-	{
-		name = ProcessController
-		resource = _PressureControl
-		title = N2 Pressure Controller
-		capacity = #$/CrewCapacity$
-		running = true
-	}
+  MODULE
+  {
+    name = ProcessController
+    resource = _PressureControl
+    title = N2 Pressure Controller
+    capacity = 1.67
+    running = true
+  }
 
-	@MODULE[ProcessController],*
-	{
-		@capacity *= 1.67
-	}
+  @MODULE[ProcessController],*
+  {
+    @capacity *= 1.67
+  }
 
-	MODULE
-	{
-		name = Configure
-		title = Life Support
-		slots = 2
+  MODULE
+  {
+    name = Configure
+    title = Life Support
+    slots = 2
 
-		SETUP
-		{
-			name = Vacuum Scrubber
-			desc = A dual-bed vacuum-exposing regenerative scrubber that sequesters <b>CarbonDioxide</b> from the internal atmosphere.
-			mass = 0.0
-			cost = 0
+    SETUP
+    {
+      name = Vacuum Scrubber
+      desc = A dual-bed vacuum-exposing regenerative scrubber that sequesters <b>CarbonDioxide</b> from the internal atmosphere.
+      mass = 0.0
+      cost = 0
 
-			MODULE
-			{
-				type = ProcessController
-				id_field = resource
-				id_value = _AdvScrubber
-			}
-		}
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _AdvScrubber
+      }
+    }
 
-		SETUP
-		{
-			name = N2 Pressure Controller
-			desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+	  SETUP
+    {
+      name = N2 Pressure Controller
+      desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
 
-			MODULE
-			{
-				type = ProcessController
-				id_field = resource
-				id_value = _PressureControl
-			}
-		}
-	}
-}
-
-@PART[ROC-Dragon2Capsule]:NEEDS[FeatureScience]:BEFORE[RP-0-Kerbalism]
-{
-	%capsuleTier = Mature
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _PressureControl
+      }
+    }
+  }
 }
