Rename Part Names to the RO Capsules common naming system

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CMInterior.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CMInterior.cfg
@@ -1,9 +1,9 @@
 INTERNAL
 {
-	name = ROC-Dragon2CapsuleInterior
+	name = ROC-Dragon2CMInterior
 	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2CapsuleInterior
+		model = ROCapsules/Assets/KK/Dragon2CMInterior
 	}
 	MODULE
 	{
