--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
@@ -1,6 +1,6 @@
 ﻿PART
 {
-	name = ROC-Dragon2Chute
+	name = ROC-Dragon2Chute2
 	module = Part
 	author = Kartoffelkuchen, Vader111
 
@@ -12,14 +12,14 @@
 
 	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2Chute
+		model = ROCapsules/Assets/KK/Dragon2Chute2
 	}
 
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2	
-	CoMOffset = 0.0, 0.0, 1.557307
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
+	CoMOffset = 0.0, -1.4, 1.0
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
@@ -33,9 +33,9 @@
 	cost = 150
 	category = Utility
 	subcategory = 0
-	title = Crew Dragon Parachute
+	title = Crew Dragon Drogue Parachute
 	manufacturer = SpaceX
-	description = Crew Dragon Parachute
+	description = Crew Dragon Drogue Parachute
 	tags = Spacex, Dragon, Crew
 
 	sound_parachute_open = activate
@@ -44,7 +44,7 @@
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.5
+	mass = 0.1
 	dragModelType = default
 	crashTolerance = 12
 	maxTemp = 900
@@ -64,26 +64,27 @@
 		name = ModuleParachute
 		invertCanopy = true
 		autoCutSpeed = 0.5
-		capName = main_package
-		canopyName = mainChute_pivot
-		semiDeployedAnimation = KK_SpXCD_mains_semi
-		fullyDeployedAnimation = KK_SpXCD_mains_fully
+		capName = drogueChute_base
+		canopyName = drogueChute_pivot
+		semiDeployedAnimation = KK_SpXCD_drogues_semi
+		fullyDeployedAnimation = KK_SpXCD_drogues_fully
 		stowedDrag = 0.12
 		semiDeployedDrag = 5
-		fullyDeployedDrag = 10
+		fullyDeployedDrag = 100
 		minAirPressureToOpen = 0.01
 		clampMinAirPressure = 0.01
-		deployAltitude = 1500
-		deploymentSpeed = 0.25
-		semiDeploymentSpeed = 0.5
+		deployAltitude = 8000
+		deploymentSpeed = 10.0
+		semiDeploymentSpeed = 1.5
 		chuteMaxTemp = 673.15
+		machHeatMultBase = 0.5
 		chuteThermalMassPerArea = 0.08
 	}
 
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.25
+		caseMass = 0.075
 		timer = 0
 		mustGoDown = false
 		spareChutes = 0
@@ -92,20 +93,20 @@
 
 		PARACHUTE
 		{
-			parachuteName = mainChute_pivot
-			capName = main_package
-			preDeploymentAnimation = KK_SpXCD_mains_semi
-			deploymentAnimation = KK_SpXCD_mains_fully
+			parachuteName = drogueChute_pivot
+			capName = drogueChute_base
+			preDeploymentAnimation = KK_SpXCD_drogues_semi
+			deploymentAnimation = KK_SpXCD_drogues_fully
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 4
-			preDeploymentSpeed = 2.5
-			minDeployment = 3500
-			deployedDiameter = 55
-			deploymentSpeed = 5.0
-			deploymentAlt = 1500
-			cutAlt = -1
+			preDeployedDiameter = 5.0
+			preDeploymentSpeed = 1.5
+			minDeployment = 8000
+			deployedDiameter = 10.0
+			deploymentSpeed = 10.0
+			deploymentAlt = 8000
+			cutAlt = 3500
 		}
 	}
 
@@ -146,26 +147,26 @@
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 0.67
+		dragModifier = 2.5
 	}
 
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 25
+		dragModifier = 8
 	}
 }
 
-@PART[ROC-Dragon2Chute]:AFTER[zzzRealismOverhaul]
+@PART[ROC-Dragon2Chute2]:AFTER[zzzRealismOverhaul]
 {
 	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
 	@MODULE[RealChuteModule]
 	{
 		@PARACHUTE
 		{
-			@minDeployment = 3500
-			@deploymentAlt = 1500
+			@minDeployment = 8000
+			@deploymentAlt = 8000
 		}
 	}
 }
