--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
@@ -1,6 +1,6 @@
 ﻿PART
 {
-	name = ROC-Dragon2HeatShield
+	name = ROC-Dragon2HS
 	module = Part
 	author = Kartoffelkuchen, Vader111
 
@@ -12,7 +12,7 @@
 
 	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2HeatShield
+		model = ROCapsules/Assets/KK/Dragon2HS
 	}
 
 	NODE
