--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2SM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2SM.cfg
@@ -1,6 +1,6 @@
 ﻿PART
 {
-	name = ROC-Dragon2Trunk
+	name = ROC-Dragon2SM
 	module = Part
 	author = Kartoffelkuchen, Vader111
 
@@ -12,7 +12,7 @@
 
 	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2Trunk
+		model = ROCapsules/Assets/KK/Dragon2SM
 	}
 
 	scale = 1
