--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Kerbalism Profile.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Kerbalism Profile.cfg
@@ -1,4 +1,4 @@
-@PART[ROC-Dragon2Capsule]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
+@PART[ROC-Dragon2CM]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
 {
 	@description ^= :$: Supports a crew of 6 for 3 days.:
 	@mass -= 0.07
@@ -51,7 +51,7 @@
 	}
 }
 
-@PART[ROC-Dragon2Capsule]:NEEDS[ROCapsules,FeatureHabitat]:AFTER[zzzKerbalism]
+@PART[ROC-Dragon2CM]:NEEDS[ROCapsules,FeatureHabitat]:AFTER[zzzKerbalism]
 {
 	@MODULE[Habitat]
 	{
@@ -61,9 +61,9 @@
 	}
 }
 
-@PART[ROC-Dragon2Capsule]:NEEDS[ROCapsules,FeatureScience,RP-0]:BEFORE[RP-0-Kerbalism] { %capsuleTier = Mature }
+@PART[ROC-Dragon2CM]:NEEDS[ROCapsules,FeatureScience,RP-0]:BEFORE[RP-0-Kerbalism] { %capsuleTier = Mature }
 
-@PART[ROC-Dragon2Capsule]:NEEDS[ROCapsules,FeatureScience,RP-0]:FOR[RP-0-Kerbalism]
+@PART[ROC-Dragon2CM]:NEEDS[ROCapsules,FeatureScience,RP-0]:FOR[RP-0-Kerbalism]
 {
 	!MODULE[HardDrive] {}
 	MODULE
@@ -75,7 +75,7 @@
 	}
 }
 
-@PART[ROC-Dragon2Capsule]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
+@PART[ROC-Dragon2CM]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
 	@MODULE[ModuleCommand]
 	{
