--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-DragonHeatShield
+	name = ROC-DragonHS
 	module = Part
 	author = -ctn-, Vader111
 
@@ -12,7 +12,7 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonHeatShield
+		model = ROCapsules/Assets/PhoenixIndustries/DragonHS
 		scale = 1.0, 1.0, 1.0
 	}
 
