--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-DragonSolarPanel
+	name = ROC-DragonSP
 	module = Part
 	author = -ctn-, Vader111
 
@@ -12,7 +12,7 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonSolarPanel
+		model = ROCapsules/Assets/PhoenixIndustries/DragonSP
 		scale = 1.9, 1.9, 1.9
 	}
 
