--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/Kerbalism Profile.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/Kerbalism Profile.cfg
@@ -1,4 +1,4 @@
-@PART[ROC-DragonCapsule]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
+@PART[ROC-DragonCM]:NEEDS[RealFuels,ROCapsules]:AFTER[ROCapsules]
 {
 	@description ^= :$: Cargo to Support a crew of 4 for 4 days.:
 
@@ -52,7 +52,7 @@
 	}
 }
 
-@PART[ROC-DragonCapsule]:NEEDS[ROCapsules,FeatureHabitat]:AFTER[zzzKerbalism]
+@PART[ROC-DragonCM]:NEEDS[ROCapsules,FeatureHabitat]:AFTER[zzzKerbalism]
 {
 	@MODULE[Habitat]
 	{
@@ -62,7 +62,7 @@
 	}
 }
 
-@PART[ROC-DragonCapsule]:NEEDS[ROCapsules,FeatureScience,RP-0]:FOR[RP-0-Kerbalism]
+@PART[ROC-DragonCM]:NEEDS[ROCapsules,FeatureScience,RP-0]:FOR[RP-0-Kerbalism]
 {
 	!MODULE[HardDrive] {}
 	MODULE
@@ -74,7 +74,7 @@
 	}
 }
 
-@PART[ROC-DragonCapsule]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
+@PART[ROC-DragonCM]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
 	@MODULE[ModuleCommand]
 	{
