--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
@@ -1,8 +1,8 @@
 PART
 {
-	name = ROC-DragonCapsule
+	name = ROC-Dragon2CM
 	module = Part
-	author = -ctn-, Vader111
+	author = Kartoffelkuchen, Vader111
 
 	RSSROConfig = True
 
@@ -10,20 +10,40 @@ PART
 	//  Model and Dimensions
 	//  ============================================================================
 
-	MODEL
+	MODEL 
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonCapsule
-		scale = 1.0, 1.0, 1.0
+		model = ROCapsules/Assets/KK/Dragon2CM
 	}
 
-	rescaleFactor = 1.6
+	MODEL 
+	{
+		model = ROCapsules/Assets/KK/Dragon2DP
+		position = 0.0, 2.05, 0.0
+	}
 
-	node_stack_CAP = 0.0, 1.398, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_Chute = 0.0, 1.40, -1.18, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 1.03, 0.0, 0, 1.0, 0, 1
-	node_stack_bottom = 0.0, -0.68, 0.0, 0, -1.0, 0, 2
+	INTERNAL
+	{
+		name = ROC-Dragon2CMInterior
+	}
 
-	attachRules = 1,0,1,0,0
+	scale = 1
+	rescaleFactor = 1
+
+	node_stack_bottom = 0.0, -1.600847, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
+	node_stack_drogueCover = 0.0, 1.2, -1.0, 0.0, 1.0, 0.0, 2
+	node_stack_mainCover = 0.0, 0.0, -1.5, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 1.974, 0.0, 0.0, 1.0, 0.0, 1
+
+	CoPOffset = 0.0, 1.0, 0.0
+	CoMOffset = 0.0, -0.325, 0.0
+	CoLOffset = 0.0, -0.45, 0.0
+	CenterOfDisplacement = 0.0, 0.5, 0.0
+
+	buoyancyUseSine = False
+	buoyancy = 1.1
+
+	attachRules = 1,0,1,1,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -34,24 +54,26 @@ PART
 	cost = 150
 	category = Pods
 	subcategory = 0
-	title = Dragon Cargo Capsule
+	title = Crew Dragon Capsule
 	manufacturer = SpaceX
-	description = The Dragon Capsule is equipped with six-direction Draco RCS thrusters, fuel, interior and docking lighting, opening front panels for cargo access and A PICA-X heatshield for reentry. It can be used with stacking and attachable cargo and may be used to store science data.
-	tags = Spacex, Dragon, CRS
+	description = SpaceX’s next-generation spacecraft designed to carry humans to the International Space Station and other destinations.
+	tags = Spacex, Dragon, Crew
 
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
-	CrewCapacity = 0
+	CrewCapacity = 6
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 4
+	mass = 6.825
 	dragModelType = default
-	maximum_drag = 0.3
-	minimum_drag = 0.2
+	maximum_drag = 0.20
+	minimum_drag = 0.15
 	angularDrag = 2
+	bodyLiftOnlyUnattachedLift = True
+	bodyLiftOnlyAttachName = bottom
 	crashTolerance = 12
 	breakingForce = 250
 	breakingTorque = 250
@@ -60,6 +82,7 @@ PART
 	emissiveConstant = 0.6
 	skinMassPerArea = 2
 	thermalMassModifier = 1.0
+	fuelCrossFeed = True
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -92,6 +115,53 @@ PART
 
 	MODULE
 	{
+		name = ModuleAnimateGeneric
+		animationName = KK_SpXCD_nosecone
+		actionGUIName = Toggle Cone
+		startEventGUIName = Open Cone
+		endEventGUIName  = Close Cone
+		layer = 0
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = KK_SpXCD_windows
+		actionGUIName = Toggle Lights
+		startEventGUIName = Lights On
+		endEventGUIName = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		layer = 2
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = KK_SpX_dockingport
+		actionGUIName = Toggle Dockingport
+		startEventGUIName = Extend Dockingport
+		endEventGUIName = Retract Dockingport
+	}
+
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = crewReport
+		experimentActionName = Crew Report
+		resetActionName = Discard Crew Report
+		reviewActionName = Review Report
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		rerunnable = True
+		xmitDataScalar = 1.0
+		usageReqMaskInternal = 5
+		usageReqMaskExternal = -1
+	}
+
+	MODULE
+	{
 		name = ModuleScienceContainer
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
@@ -103,20 +173,36 @@ PART
 
 	MODULE
 	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = False
+		deflectionLiftCoeff = 1.0
+		liftingSurfaceCurve = CapsuleBottom
+		disableBodyLift = False
+		omnidirectional = False
+		perpendicularOnly = True
+		transformDir = Y
+		transformSign = -1
+		nodeEnabled = True
+		attachNodeName = bottom
+	}
+
+	MODULE
+	{
 		name = ModuleDockingNode
-		referenceAttachNode = dockingNode
-		nodeType = CBM
-		acquireForce = 0.5 // 2
-		acquireMinFwdDot = 0.8 // 0.7
+		referenceAttachNode = top
+		nodeType = NASADock
+		gendered = False
+		acquireForce = 0.5
+		acquireMinFwdDot = 0.8
 		acquireminRollDot = -3.40282347E+38
-		acquireRange = 0.25 // 0.5
-		acquireTorque = 0.5 // 2.0
-		captureMaxRvel = 0.1 // 0.3
+		acquireRange = 0.25
+		acquireTorque = 0.5
+		captureMaxRvel = 0.1
 		captureMinFwdDot = 0.998
 		captureMinRollDot = -3.40282347E+38
-		captureRange = 0.05 // 0.06
-		minDistanceToReEngage = 0.25 // 1.0
-		undockEjectionForce = 0.1 // 10
+		captureRange = 0.05
+		minDistanceToReEngage = 0.25
+		undockEjectionForce = 0.1
 		stagingEnabled = False
 	}
 
@@ -131,7 +217,7 @@ PART
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
-		thrusterTransformName = rcsThrust
+		thrusterTransformName = draco
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
@@ -157,10 +243,17 @@ PART
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
-		thrusterTransformName = thrustTransform
+		thrusterTransformName = draco_top
 		thrusterPower = 0.4
+		enableYaw = False
+		enablePitch = False
+		enableRoll = False
+		enableX = False
+		enableY = False
+		enableZ = True
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running2
+		atmosphereCurve
 		PROPELLANT
 		{
 			name = MMH
@@ -183,20 +276,20 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = ServiceModule
-		volume = 1200
+		volume = 1242
 		basemass = -1
 		TANK
 		{
 			name = MMH
-			amount = 647
-			maxAmount = 647
+			amount = 696
+			maxAmount = 696
 			isTweakable = False
 		}
 		TANK
 		{
 			name = NTO
-			amount = 502
-			maxAmount = 502
+			amount = 541
+			maxAmount = 541
 			isTweakable = False
 		}
 		TANK
@@ -211,7 +304,7 @@ PART
 	//  Comms
 	//  ============================================================================
 
-	MODULE:NEEDS[!RemoteTech]
+	MODULE:AFTER[RealismOverhaul]:NEEDS[!RealAntennas]
 	{
 		name = ModuleDataTransmitter
 		antennaType = DIRECT
@@ -225,30 +318,20 @@ PART
 		DeployFxModules = 0
 	}
 
-	MODULE:NEEDS[RemoteTech]
+	!MODULE[ModuleDataTransmitter]:BEFORE[RealAntennas],* {}
+
+	MODULE:BEFORE[RealAntennas]
 	{
-		name = ModuleSPU
-		IsRTCommandStation = False
-		RTCommandMinCrew = 0
+		name = ModuleRealAntenna
+		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
+		RFBand = K	//Default to K-band
 	}
 
-	MODULE:NEEDS[RemoteTech]
+	MODULE:BEFORE[RealAntennas]
 	{
-		name = ModuleRTAntenna
-		ActionMode0Name = Deactivate Internal Antenna
-		ActionMode1Name = Activate Internal Antenna
-		IsRTActive = False
-		Mode0OmniRange = 0
-		Mode1OmniRange = 400000
-		EnergyCost = 0.02
-		DeployFxModules = 0
-
-		TRANSMITTER
-		{
-			PacketInterval = 1.0
-			PacketSize = 0.512
-			PacketResourceCost = 0.02
-		}
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = S		//Default to S-band
 	}
 
 	//  ============================================================================
@@ -259,10 +342,10 @@ PART
 	{
 		running1
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = rcsThrust
+				transformName = draco
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.1 0.0
@@ -275,7 +358,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = rcsThrust
+				transformName = draco
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -286,10 +369,10 @@ PART
 		}
 		running2
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = thrustTransform
+				transformName = draco
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.1 0.0
@@ -302,7 +385,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = thrustTransform
+				transformName = draco
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -314,37 +397,15 @@ PART
 	}
 }
 
-//  ================================================================================
-//  Configure RealAntennas
-//  ================================================================================
-
-@PART[ROC-DragonCapsule]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
-{
-	!MODULE[ModuleDataTransmitter],* {}
-
-	MODULE
-	{
-		name = ModuleRealAntenna
-		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
-		RFBand = K	//Default to K-band
-	}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = S		//Default to S-band
-	}
-}
-
 //	==================================================
-//	Cargo Dragon command module.
+//	Dragon 2 command module.
 
 //	TAC Life Support compatibility.
 //	==================================================
 
-@PART[ROC-DragonCapsule]:FOR[RealismOverhaul]:NEEDS[TacLifeSupport]
+@PART[ROC-Dragon2CM]:AFTER[RealismOverhaul]:NEEDS[TacLifeSupport]
 {
-	@description ^= :$: Cargo to Support a crew of 4 for 4 days.:
+	@description ^= :$: Supports a crew of 4 for 2 days.:
 	@mass -= 0.07
 
 	@MODULE[ModuleCommand]
@@ -357,48 +418,48 @@ PART
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 659
+		@volume += 310
 
 		TANK
 		{
 			name = Food
-			amount = 250
-			maxAmount = 250
+			amount = 110
+			maxAmount = 110
 		}
 
 		TANK
 		{
 			name = Water
-			amount = 250
-			maxAmount = 250
+			amount = 70
+			maxAmount = 70
 		}
 
 		TANK
 		{
 			name = Oxygen
-			amount = 10000
-			maxAmount = 10000
+			amount = 11000
+			maxAmount = 11000
 		}
 
 		TANK
 		{
 			name = Waste
 			amount = 0
-			maxAmount = 50
+			maxAmount = 10
 		}
 
 		TANK
 		{
 			name = WasteWater
 			amount = 0
-			maxAmount = 50
+			maxAmount = 40
 		}
 
 		TANK
 		{
 			name = CarbonDioxide
 			amount = 0
-			maxAmount = 5000
+			maxAmount = 3500
 		}
 	}
 
