--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute1.cfg
@@ -1,6 +1,6 @@
 ﻿PART
 {
-	name = ROC-Dragon2DrogueChute
+	name = ROC-Dragon2Chute1
 	module = Part
 	author = Kartoffelkuchen, Vader111
 
@@ -12,14 +12,14 @@
 
 	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2DrogueChute
+		model = ROCapsules/Assets/KK/Dragon2Chute1
 	}
 
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-	CoMOffset = 0.0, -1.4, 1.0
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2	
+	CoMOffset = 0.0, 0.0, 1.557307
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
@@ -33,9 +33,9 @@
 	cost = 150
 	category = Utility
 	subcategory = 0
-	title = Crew Dragon Drogue Parachute
+	title = Crew Dragon Parachute
 	manufacturer = SpaceX
-	description = Crew Dragon Drogue Parachute
+	description = Crew Dragon Parachute
 	tags = Spacex, Dragon, Crew
 
 	sound_parachute_open = activate
@@ -44,7 +44,7 @@
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.1
+	mass = 0.5
 	dragModelType = default
 	crashTolerance = 12
 	maxTemp = 900
@@ -64,27 +64,26 @@
 		name = ModuleParachute
 		invertCanopy = true
 		autoCutSpeed = 0.5
-		capName = drogueChute_base
-		canopyName = drogueChute_pivot
-		semiDeployedAnimation = KK_SpXCD_drogues_semi
-		fullyDeployedAnimation = KK_SpXCD_drogues_fully
+		capName = main_package
+		canopyName = mainChute_pivot
+		semiDeployedAnimation = KK_SpXCD_mains_semi
+		fullyDeployedAnimation = KK_SpXCD_mains_fully
 		stowedDrag = 0.12
 		semiDeployedDrag = 5
-		fullyDeployedDrag = 100
+		fullyDeployedDrag = 10
 		minAirPressureToOpen = 0.01
 		clampMinAirPressure = 0.01
-		deployAltitude = 8000
-		deploymentSpeed = 10.0
-		semiDeploymentSpeed = 1.5
+		deployAltitude = 1500
+		deploymentSpeed = 0.25
+		semiDeploymentSpeed = 0.5
 		chuteMaxTemp = 673.15
-		machHeatMultBase = 0.5
 		chuteThermalMassPerArea = 0.08
 	}
 
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.075
+		caseMass = 0.25
 		timer = 0
 		mustGoDown = false
 		spareChutes = 0
@@ -93,20 +92,20 @@
 
 		PARACHUTE
 		{
-			parachuteName = drogueChute_pivot
-			capName = drogueChute_base
-			preDeploymentAnimation = KK_SpXCD_drogues_semi
-			deploymentAnimation = KK_SpXCD_drogues_fully
+			parachuteName = mainChute_pivot
+			capName = main_package
+			preDeploymentAnimation = KK_SpXCD_mains_semi
+			deploymentAnimation = KK_SpXCD_mains_fully
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 5.0
-			preDeploymentSpeed = 1.5
-			minDeployment = 8000
-			deployedDiameter = 10.0
-			deploymentSpeed = 10.0
-			deploymentAlt = 8000
-			cutAlt = 3500
+			preDeployedDiameter = 4
+			preDeploymentSpeed = 2.5
+			minDeployment = 3500
+			deployedDiameter = 55
+			deploymentSpeed = 5.0
+			deploymentAlt = 1500
+			cutAlt = -1
 		}
 	}
 
@@ -147,26 +146,26 @@
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 2.5
+		dragModifier = 0.67
 	}
 
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 8
+		dragModifier = 25
 	}
 }
 
-@PART[ROC-Dragon2DrogueChute]:AFTER[zzzRealismOverhaul]
+@PART[ROC-Dragon2Chute1]:AFTER[zzzRealismOverhaul]
 {
 	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
 	@MODULE[RealChuteModule]
 	{
 		@PARACHUTE
 		{
-			@minDeployment = 8000
-			@deploymentAlt = 8000
+			@minDeployment = 3500
+			@deploymentAlt = 1500
 		}
 	}
 }
