--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover2.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-Dragon2MainCover
+	name = ROC-Dragon2Cover2
 	module = Part
 	author = Kartoffelkuchen, Vader111
 
@@ -12,15 +12,14 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/KK/Dragon2MainCover
+		model = ROCapsules/Assets/KK/Dragon2Cover2
 	}
 
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_drogueChutes = 0.0, 1.4, 0.5, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2
-	CoMOffset = 0.0, 0.0, 1.5
+	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2
+	CoMOffset = 0.0, 0.0, 1.0
 
 	attachRules = 1,0,1,1,0
 
@@ -36,16 +35,16 @@ PART
 	cost = 150
 	category = Coupling
 	subcategory = 0
-	title = Crew Dragon Main Cover
+	title = Crew Dragon Drogue Cover
 	manufacturer = SpaceX
-	description = Crew Dragon Main Cover
+	description = Crew Dragon Drogue Cover
 	tags = Spacex, Dragon, Crew
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.05
+	mass = 0.025
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
