--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-DragonTrunk
+	name = ROC-DragonSC
 	module = Part
 	author = -ctn-, Vader111
 
@@ -12,19 +12,17 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonTrunk
+		model = ROCapsules/Assets/PhoenixIndustries/DragonSC
 		scale = 1.0, 1.0, 1.0
 	}
 
 	rescaleFactor = 1.6
 
-	node_stack_top = 0.0, 0.75, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.2, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_trunk = 0.0, -0.5, 0.0, 0.0, -1.0, 0.0, 2
+	node_attach = 0.0, 0.0, -0.1, 0.0, 0.0, -1.0
 
-	attachRules = 1,0,1,1,1
+	attachRules = 1,0,0,1,0
 
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, decouple
 	sound_decoupler_fire = decouple
 
 	//  ============================================================================
@@ -36,16 +34,16 @@ PART
 	cost = 150
 	category = Structural
 	subcategory = 0
-	title = Dragon Cargo Trunk
+	title = Dragon Cargo Trunk Solar Panel Fairing
 	manufacturer = SpaceX
-	description = The cargo trunk is quipped with a small battery and decoupler to detach a small payload from inside. Designed to have two solar panels with solar panel covers attached to it in pairs.
+	description = A cover to attach to the Dragon trunk in order to make it aerodynamic and shield the solar arrays from the harshness of ascent.  Jettisoned shortly after Dragon separation.
 	tags = Spacex, Dragon, CRS
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.5
+	mass = 0.025
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
@@ -53,12 +51,14 @@ PART
 	crashTolerance = 12
 	breakingForce = 250
 	breakingTorque = 250
+	stageOffset = 1
+	childStageOffset = 1
 	maxTemp = 1073.15
 	skinMaxTemp = 1073.15
 	emissiveConstant = 0.6
 	skinMassPerArea = 2
 	thermalMassModifier = 1.0
-	fuelCrossFeed = True
+	fuelCrossFeed = False
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -67,39 +67,7 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 50
-		isOmniDecoupler = false
-		explosiveNodeID = top
-	}
-
-	MODULE
-	{
-		name = ModuleDecouple
-		ejectionForce = 10
-		explosiveNodeID = trunk
-	}
-	
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = dragonTrunkLight
-		defaultActionGroup = Light
-		actionGUIName = Toggle Lights
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-	}
-
-	MODULE
-	{
-		name = ModuleFuelTanks
-		volume = 25
-		type = ServiceModule
-		basemass = -1
-		TANK
-		{
-			name = ElectricCharge
-			amount = 25000
-			maxAmount = 25000
-		}
+		ejectionForce = 15
+		explosiveNodeID = srf
 	}
 }
